--- a/05-regression-regularization/05-regression-regularization.Rmd
+++ b/05-regression-regularization/05-regression-regularization.Rmd
@@ -582,7 +582,7 @@ Any penalty that involves the $\ell_1$ norm will do this.
 
 .pull-left[
 
-Contours of the error and constraint functions for lasso (left) and ridge (right). The solid blue areas are the constraint regions, $\beta_{1}^{2}+\beta_{2}^{2} \leq t,$ and $\beta_{1}^{2}+\beta_{2}^{2} \leq t$, while the red ellipses are the contours of the RSS and $\widehat\beta$ is the OLS estimator.
+Contours of the error and constraint functions for lasso (left) and ridge (right). The solid blue areas are the constraint regions, $\beta_{1}^{2}+\beta_{2}^{2} \leq t,$ and $|\beta_{1}|+|\beta_{2}| \leq t$, while the red ellipses are the contours of the RSS and $\widehat\beta$ is the OLS estimator.
 
 ]
 
